<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/back_button"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:onClick="doGoBackToLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/ellipse" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/round_chevron_left_24"
            android:tint="@color/colorAccent" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/login_layout_vw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_header"
            android:textSize="24sp"
            android:textColor="@color/appwhite"
            fontPath="fonts/NunitoSans-SemiBold.ttf"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_header"
            android:textSize="24sp"
            android:textColor="@color/appwhite"
            fontPath="fonts/NunitoSans-SemiBold.ttf"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/password_reset_intructions"
            android:textSize="14sp"
            android:textColor="@color/appwhite"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/app_light_grey">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/password_email_view"
                android:textColor="@color/appwhite"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:text="@string/reset_password"
            android:onClick="onResetPasswordClick"
            android:textColor="@color/blue"
            android:background="@drawable/white_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_bottom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/appwhite"
            android:textSize="15sp"
            android:text="@string/don_t_have_an_account"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:textSize="15sp"
            android:onClick="onRegisterButtonClicked"
            android:textColor="@color/appwhite"
            android:textStyle="bold"
            android:background="?android:selectableItemBackground"
            android:text="@string/sign_up"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>