<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/metromobile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/contentView"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/contentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appLogo"
            android:layout_margin="25dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:background="@drawable/cardcurve"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:padding="25dp"
                app:layout_constraintTop_toBottomOf="@id/appLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:layout_marginStart="4dp"
                    fontPath="fonts/arial.ttf"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/app_black_text_color"
                    android:textSize="23sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:alpha="0.7"
                    android:layout_marginStart="5dp"
                    fontPath="fonts/arial.ttf"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/app_black_text_color"
                    android:text="@string/sign_in_to_continue" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/login_email_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        fontPath="fonts/arial.ttf"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?colorControlNormal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_password_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        fontPath="fonts/arial.ttf"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="doShowForgotPassword"
                    android:padding="5dp"
                    fontPath="fonts/arial.ttf"
                    android:text="@string/forgot_password"
                    android:textColor="?colorAccent"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_curve"
                    android:text="@string/login"
                    android:onClick="doProcessUserAuthentication"
                    android:textAllCaps="false"
                    fontPath="fonts/arial.ttf"
                    android:textColor="@color/appwhite"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/reg_bottom_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        fontPath="fonts/arial.ttf"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:textStyle="bold"
                        android:onClick="doSignUpButtonClicked"
                        android:paddingLeft="7dp"
                        fontPath="fonts/arial.ttf"
                        android:paddingTop="10dp"
                        android:paddingRight="7dp"
                        android:paddingBottom="10dp"
                        android:background="?android:selectableItemBackground"
                        android:text="@string/sign_up"
                        android:textColor="?colorAccent"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
